8278420: C2: assert(!n->is_Store() && !n->is_LoadStore()) failed: no node with a side effect